# NServer

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: msvc.yml
docs/: Doxyfile.in
src/: CMakeLists.txt  main.cpp
src/module/: CMakeLists.txt  api.h
src/module/api/: login.cpp  login.h
test/: CMakeLists.txt
test/module/api/: login.cpp
